# PlatformGame

./: .gitignore  CMakeLists.txt  LICENSE  PlatformGame.cpp  PlatformGame.sln  PlatformGame.vcxproj  PlatformGame.vcxproj.filters  README.md  config.xml  vcpkg.json
Assets/Maps/: MapTemplate.tmx
Assets/Textures/: Player2_Spritesheet.tsx  enemy_spritesheet.tsx  player2_spritesheet.tsx
src/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  CutscenePlayer.cpp  CutscenePlayer.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Entity.h  EntityManager.cpp  EntityManager.h  GuiControl.h  GuiControlButton.cpp  GuiControlButton.h  GuiManager.cpp  GuiManager.h  Input.cpp  Input.h  Item.cpp  Item.h  Log.cpp  Log.h  Map.cpp  Map.h  Module.h  Pathfinding.cpp  Pathfinding.h  PerfTimer.cpp  PerfTimer.h  Physics.cpp  Physics.h  PlatformGame.cpp  Player.cpp  Player.h  Render.cpp  Render.h  Scene.cpp  Scene.h  (+8 more)
